cases/tests/nginx-ingress/renew_tls_secret/resource/demo-ingress-expired.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo.example.com
    secretName: expired-tls-secret
  rules:
  - host: demo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port:
              number: 5678
