cases/tests/nginx-ingress/renew_tls_secret/resource/echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: demo
  labels:
    app: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:0.2.3
        # IMPORTANT: use args, not command
        args:
          - "-text=hello"
          - "-listen=:5678"
        ports:
          - containerPort: 5678
            name: http
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: demo
  labels:
    app: echo-server
spec:
  type: ClusterIP
  selector:
    app: echo-server
  ports:
  - port: 5678
    targetPort: 5678
    protocol: TCP
